--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -2,13 +2,13 @@
 
 # {{ package_name }}
 
-## Python and Tool Dependencies
+## Installing Python, pipx, and Poetry
 
 Sadly, there are many, many ways to install and set up your Python environment, each
 with its own pitfalls.
 
 This is a quick cheat sheet for one of the simplest and most reliable ways to set up
-**Python 3.11+** and **Poetry 2.0+** (both fairly new as of 2025) using
+**Python 3.11+** and **Poetry 2.0+** (what you should use as of 2025) using
 [**pyenv**](https://github.com/pyenv/pyenv) and
 [**pipx**](https://github.com/pypa/pipx).
 
