Add footer credit.

--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -77,3 +77,8 @@ poetry up
 # Update poetry itself: 
 poetry self update
 ```
+
+* * *
+
+*This project was built from
+[simple-modern-poetry](https://github.com/jlevy/simple-modern-poetry).*
