--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -1,25 +1,40 @@
-[tool.poetry]
+[project]
 name = "{{ package_slug }}"
-# Keep this a dev version, as the dynamic versioning plugin is used for actual release versions:
-version = "0.0.0.dev"
 description = "{{ package_description }}"
-authors = ["{{ package_author_name }} <{{ package_author_email }}>"]
+authors = [
+    { name="{{ package_author_name }}", email="{{ package_author_email }}" },
+]
 readme = "README.md"
 license = "{{ package_license }}"
-repository = "https://github.com/{{ package_github_org }}/{{ package_slug }}"
-requires-poetry = ">=2.0"
+requires-python = ">=3.11,<4.0"
+dynamic = [ "dependencies", "version" ]
 
-# Useful plugins:
+[tool.poetry]
+requires-poetry = ">=2.0"
+packages = [
+    { include = "{{ package_slug }}", from = "src" },
+]
+# Keep this a dev version, as the dynamic versioning plugin is used for actual release versions:
+version = "0.0.0.dev"
+
+# See: https://github.com/mtkennerly/poetry-dynamic-versioning
+[build-system]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.7.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
+
+[project.scripts]
+# Add script entry points here.
+# {{ package_slug }} = "{{ package_slug }}:main"
+
+# See:
 # https://github.com/python-poetry/poetry-plugin-shell
-# https://github.com/mtkennerly/poetry-dynamic-versioning
 # https://github.com/MousaZeidBaker/poetry-plugin-up
 [tool.poetry.requires-plugins]
 poetry-plugin-shell = "^1.0.1"
-poetry-dynamic-versioning = "^1.7.0"
 poetry-plugin-up = "^0.9.0"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
@@ -29,10 +44,6 @@ usort = "^1.0.8.post1"
 mypy = "^1.15.0"
 codespell = "^2.4.1"
 rich = "^13.9.4"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
 
 # Auto-generated version for builds based on git tag or commit.
 #
