--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -5,7 +5,7 @@ authors = [
     { name="{{ package_author_name }}", email="{{ package_author_email }}" },
 ]
 readme = "README.md"
-license = "{{ package_license }}"
+license = "MIT"
 requires-python = ">=3.11,<4.0"
 dynamic = [ "dependencies", "version" ]
 
