--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -1,7 +1,7 @@
 # ---- Project Info and Dependencies ----
 
 [project.urls]
-Repository = "https://github.com/{{ package_github_username }}/{{ package_slug }}"
+Repository = "https://github.com/{{ package_github_org }}/{{ package_slug }}"
 # Homepage = "https://..."
 
 [project]
