Rename module name for clarity. Improve help.

--- a/template/development.md.jinja
+++ b/template/development.md.jinja
@@ -3,7 +3,7 @@
 This project is set up to use [uv](https://docs.astral.sh/uv/) to manage Python and
 dependencies. First, be sure you have uv installed.
 
-Then [fork](https://github.com/{{ package_github_org }}/{{ package_slug }}/fork) this
+Then [fork](https://github.com/{{ package_github_org }}/{{ package_name }}/fork) this
 repo (having your own fork will make it easier to contribute),
 [check out](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository),
 the code, and install the package dependencies:
