--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -1,11 +1,11 @@
 # ---- Project Info and Dependencies ----
 
 [project.urls]
-Repository = "https://github.com/{{ package_github_org }}/{{ package_slug }}"
+Repository = "https://github.com/{{ package_github_org }}/{{ package_name }}"
 # Homepage = "https://..."
 
 [project]
-name = "{{ package_slug }}"
+name = "{{ package_name }}"
 description = "{{ package_description }}"
 authors = [
     { name="{{ package_author_name }}", email="{{ package_author_email }}" },
@@ -30,7 +30,7 @@ dev = [
 
 [project.scripts]
 # Add script entry points here.
-# {{ package_slug }} = "{{ package_slug }}:main"
+# {{ package_name }} = "{{ package_module }}:main"
 
 
 # ---- Build system ----
