--- a/template/src/{{ package_slug }}/__init__.py.jinja
+++ b/template/src/{{ package_slug }}/__init__.py.jinja
@@ -2,4 +2,4 @@ __all__ = (  # noqa: F405
     # TODO: Add all public symbols here.
 )
 
-from .{{ package_slug }} import *  # noqa: F403
+from .{{ package_module }} import *  # noqa: F403
