--- a/template/development.md.jinja
+++ b/template/development.md.jinja
@@ -21,30 +21,40 @@ make
 # Build wheel:
 make build
 
-# Linting and testing individually:
+# Linting:
 make lint
+
+# Run tests:
 make test
 
 # Delete all the build artifacts:
 make clean
 
-# To run a shell within the Python environment:
-# You can use uv to create and activate a virtual environment
-uv venv
-source .venv/bin/activate
-
-# Thereafter you can run tests.
-
-# To run tests:
+# To run tests by hand:
 uv run pytest   # all tests
 uv run pytest -s src/module/some_file.py  # one test, showing outputs
 
-# uv dependency management commands:
+# Build and install current dev executables to use as local tools:
+uv tool install --editable .
+
+# Dependency management commands:
 # Add a new dependency:
 uv add package_name
 # Add a development dependency:
 uv add --dev package_name
+# Update to latest compatible versions (including dependencies on git repos):
+uv sync --upgrade
+# Update dependencies and create/update lockfile:
+uv lock --upgrade
+# Update a specific package:
+uv lock --upgrade-package package_name
+
+# Run a shell within the Python environment:
+uv venv
+source .venv/bin/activate
 ```
+
+See [uv docs](https://docs.astral.sh/uv/) for details.
 
 ## Release Process
 
