Minor dev doc clarity.

--- a/template/development.md.jinja
+++ b/template/development.md.jinja
@@ -6,15 +6,19 @@ dependencies. First, be sure you have uv installed.
 Then [fork](https://github.com/{{ package_github_org }}/{{ package_name }}/fork) this
 repo (having your own fork will make it easier to contribute),
 [check out](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository),
-the code, and install the package dependencies:
+the code.
+
+The `Makefile` simply offers shortcuts to `uv` commands for developer convenience.
+(For clarity, GitHub Actions don't use the Makefile and just call `uv` directly.)
+
+Developer workflows:
 
 ```shell
-uv sync --all-extras --dev
-```
+# First, install all dependencies and set up your virtual environment.
+# This simply runs `uv sync --all-extras --dev` to install all packages,
+# including dev dependencies and optional dependencies.
+make install
 
-Developer workflows: The Makefile simply provides shortcuts to uv commands:
-
-```shell
 # Run uv sync, lint, and test:
 make
 
@@ -37,20 +41,21 @@ make upgrade
 uv run pytest   # all tests
 uv run pytest -s src/module/some_file.py  # one test, showing outputs
 
-# Build and install current dev executables to use as local tools:
+# Build and install current dev executables, to let you use your dev copies
+# as local tools:
 uv tool install --editable .
 
-# Dependency management with uv:
+# Dependency management directly with uv:
 # Add a new dependency:
 uv add package_name
 # Add a development dependency:
 uv add --dev package_name
 # Update to latest compatible versions (including dependencies on git repos):
 uv sync --upgrade
-# Update dependencies and create/update lockfile:
-uv lock --upgrade
 # Update a specific package:
 uv lock --upgrade-package package_name
+# Update dependencies on a package:
+uv add package_name@latest
 
 # Run a shell within the Python environment:
 uv venv
