--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -19,10 +19,8 @@ dependencies = []
 
 [dependency-groups]
 dev = [
-    "black>=24.10.0",
-    "pytest>=8.3.4",
-    "ruff>=0.4.10",
-    "usort>=1.0.8.post1",
+    "pytest>=8.3.5",
+    "ruff>=0.11.0",
     "mypy>=1.15.0",
     "codespell>=2.4.1",
     "rich>=13.9.4",
@@ -56,14 +54,24 @@ bump = "true"
 
 # ---- Settings ----
 
-[tool.black]
-line-length = 88
-
 [tool.ruff]
-line-length = 88
+line-length = 100
 
 [tool.ruff.lint]
-ignore = ["E402", "E731", "E712"]
+select = [
+    "E", # pycodestyle
+    "F", # Pyflakes
+    "UP", # pyupgrade   
+    "B", # flake8-bugbear
+    "I", # isort
+    # "SIM", # flake8-simplify
+]
+ignore = [
+    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
+    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
+    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
+]
+
 
 [tool.mypy]
 disable_error_code = [
