Update dummy args.
Should make it work to build an empty template.

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -29,7 +29,7 @@ dev = [
 
 [project.scripts]
 # Add script entry points here.
-# {{ package_name }} = "{{ package_module }}:main"
+{{ package_name }} = "{{ package_module }}:main"
 
 
 # ---- Build system ----
