--- a/template/development.md.jinja
+++ b/template/development.md.jinja
@@ -6,8 +6,9 @@ This project is set up to use [uv](https://docs.astral.sh/uv/) to manage Python 
 dependencies. First, be sure you
 [have uv installed](https://docs.astral.sh/uv/getting-started/installation/).
 
-Then [fork](https://github.com/{{ package_github_org }}/{{ package_name }}/fork) this
-repo (having your own fork will make it easier to contribute) and
+Then [fork the {{package_github_org}}/{{package_name}}
+repo](https://github.com/{{package_github_org}}/{{package_name}}/fork) (having your own
+fork will make it easier to contribute) and
 [clone it](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository).
 
 ## Basic Developer Workflows
