--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -102,7 +102,10 @@ ignore = [
 # https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
 [tool.basedpyright]
 include = ["src", "tests", "devtools"]
-# Typically noisy warnings, comment/uncomment as desired:
+# Make ignoring type warnings easier:
+reportIgnoreCommentWithoutRule = false
+reportUnnecessaryTypeIgnoreComment = false
+# A few typically noisy warnings, comment/uncomment as desired:
 reportMissingTypeStubs = false
 reportUnusedCallResult = false
 # reportMissingImports = false
