--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -3,6 +3,7 @@
 [project.urls]
 Repository = "https://github.com/{{ package_github_org }}/{{ package_name }}"
 # Homepage = "https://..."
+# Documentation = "https://..."
 
 [project]
 name = "{{ package_name }}"
@@ -15,7 +16,33 @@ license = "MIT"
 requires-python = ">=3.11,<4.0"
 dynamic = ["version"]
 
-dependencies = []
+# https://pypi.org/classifiers/
+# Adjust as needed:
+classifiers = [
+    # Adjust as needed:
+    "Development Status :: 4 - Beta",
+    # "Development Status :: 5 - Production/Stable",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Typing :: Typed",
+    # Include this to avoid accidentally publishing to PyPI:
+    # "Private :: Do Not Upload",
+]
+
+
+# ---- Main dependencies ----
+
+dependencies = [
+]
+
+
+# ---- Dev dependencies ----
 
 [dependency-groups]
 dev = [
