--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -8,35 +8,9 @@ project.\]\]\]
 
 * * *
 
-## Installing uv and Python
+## Project Docs
 
-This project is set up to use [**uv**](https://docs.astral.sh/uv/), the new package
-manager for Python. `uv` replaces traditional use of `pyenv`, `pipx`, `poetry`, `pip`,
-etc. This is a quick cheat sheet on that:
-
-On macOS or Linux, if you don't have `uv` installed, a quick way to install it:
-
-```shell
-curl -LsSf https://astral.sh/uv/install.sh | sh
-```
-
-For macOS, you prefer [brew](https://brew.sh/) you can install or upgrade uv with:
-
-```shell
-brew update
-brew install uv
-```
-
-See [uv's docs](https://docs.astral.sh/uv/getting-started/installation/) for more
-installation methods and platforms.
-
-Now you can use uv to install a current Python environment:
-
-```shell
-uv python install 3.13 # Or pick another version.
-```
-
-## Development Workflows
+For how to install uv and Python, see [installation.md](installation.md).
 
 For development workflows, see [development.md](development.md).
 
