Relax a couple linter defaults.

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -138,11 +138,12 @@ reportUnnecessaryTypeIgnoreComment = false
 # A few typically noisy warnings, comment/uncomment as desired:
 reportMissingTypeStubs = false
 reportUnusedCallResult = false
+reportAny = false
+reportExplicitAny = false
+reportImplicitStringConcatenation = false
 # reportMissingImports = false
 # reportUnnecessaryIsInstance = false
 # reportUnreachable = false
-# reportAny = false
-# reportExplicitAny = false
 # reportUnknownVariableType = false
 # reportUnknownArgumentType = false
 
