--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -54,7 +54,7 @@ dev = [
 ]
 
 [project.scripts]
-# Add script entry points here.
+# Add script entry points here:
 {{ package_name }} = "{{ package_module }}:main"
 
 
@@ -90,8 +90,8 @@ packages = ["src/{{ package_module }}"]
 line-length = 100
 
 [tool.ruff.lint]
-# See: https://docs.astral.sh/ruff/rules/
 select = [
+    # See: https://docs.astral.sh/ruff/rules/
     # Basic list from: https://docs.astral.sh/ruff/linter/#rule-selection
     "E", # https://docs.astral.sh/ruff/rules/#error-e
     "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
@@ -106,6 +106,7 @@ select = [
 
 ]
 ignore = [
+    # Disable some rules that are overly pedantic. Add/remove as desired:
     "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
     "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
     "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
@@ -126,28 +127,35 @@ ignore = [
     "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
 ]
 
+[tool.basedpyright]
 # BasedPyright currently seems like the best type checker option, much faster
 # than mypy and with a good extension for VSCode/Cursor.
 # https://marketplace.visualstudio.com/items?itemName=detachhead.basedpyright
 # https://docs.basedpyright.com/latest/configuration/config-files/#sample-pyprojecttoml-file
-[tool.basedpyright]
 include = ["src", "tests", "devtools"]
-# Make ignoring type warnings easier:
+# By default BasedPyright is very strict, so you almost certainly want to disable
+# some of the rules.
+# First, these turn off warnings about (yes) how you ignore warnings:
 reportIgnoreCommentWithoutRule = false
 reportUnnecessaryTypeIgnoreComment = false
-# A few typically noisy warnings, comment/uncomment as desired:
+# A few typically noisy warnings are next.
+# How many you enable is up to you. The first few are off by default, but you can
+# comment/uncomment these as desired:
 reportMissingTypeStubs = false
 reportUnusedCallResult = false
 reportAny = false
 reportExplicitAny = false
 reportImplicitStringConcatenation = false
+reportUnreachable = false
+# reportPrivateImportUsage = false
+# reportPrivateLocalImportUsage = false
 # reportMissingImports = false
 # reportUnnecessaryIsInstance = false
-# reportUnreachable = false
 # reportUnknownVariableType = false
 # reportUnknownArgumentType = false
 
 [tool.codespell]
+# Add here as needed:
 # ignore-words-list = "foo,bar"
 # skip = "foo.py,bar.py"
 
