--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -46,11 +46,12 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
-    "ruff>=0.11.0",
+    "pytest-sugar>=1.0.0",
+    "ruff>=0.11.9",
     "codespell>=2.4.1",
-    "rich>=13.9.4",
-    "basedpyright>=1.28.2",
-    "funlog>=0.2.0",
+    "rich>=14.0.0",
+    "basedpyright>=1.29.1",
+    "funlog>=0.2.1",
 ]
 
 [project.scripts]
