--- a/template/development.md.jinja
+++ b/template/development.md.jinja
@@ -22,7 +22,7 @@ The `Makefile` simply offers shortcuts to `uv` commands for developer convenienc
 # including dev dependencies and optional dependencies.
 make install
 
-# Run uv sync, lint, and test:
+# Run uv sync, lint, and test (and also generate agent rules):
 make
 
 # Build wheel:
@@ -66,6 +66,17 @@ source .venv/bin/activate
 ```
 
 See [uv docs](https://docs.astral.sh/uv/) for details.
+
+## Agent Rules
+
+See [.cursor/rules](.cursor/rules) for agent rules.
+These are written for [Cursor](https://www.cursor.com/) but are also used by other
+agents because the Makefile will generate `CLAUDE.md` and `AGENTS.md` from the same
+rules.
+
+```shell
+make agent-rules
+```
 
 ## IDE setup
 
