Upgrade uv, fix for uv-dynamic-versioning 0.9.0.

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -77,7 +77,7 @@ source = "uv-dynamic-versioning"
 [tool.uv-dynamic-versioning]
 vcs = "git"
 style = "pep440"
-bump = "true"
+bump = true
 
 [tool.hatch.build.targets.wheel]
 # The source location for the package.
